--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Back-end for Big Mac Store.",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
-    "dev": "nodemon index.ts",
+    "start": "tsx watch ./*",
+    "dev": "tsx watch index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leonjmac/bms-node.git"
@@ -33,11 +34,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   },
   "dependencies": {
