--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsx watch ./*",
     "dev": "tsx watch index.ts",
-    "test": "jest"
+    "test": "tap"
   },
   "type": "commonjs",
   "repository": {
@@ -30,13 +30,13 @@
   },
   "homepage": "https://github.com/leonjmac/bms-node#readme",
   "devDependencies": {
+    "@tapjs/typescript": "^1.4.2",
     "@types/braintree": "^3.3.11",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
     "dotenv": "^16.4.5",
     "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
+    "tap": "^18.7.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tsx": "^4.7.1",
