--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,15 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+
+# Tap files
+/.tap
+*.tap/processinfo/*
+*.tap/coverage/*
+*.tap/test-results/*
 *.tap
-*.tap/*
+.tap
+*.ts.tap
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
