--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@types/braintree": "^3.3.11",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/sinon": "^17.0.3",
     "dotenv": "^16.4.5",
     "prettier": "^3.2.5",
+    "sinon": "^17.0.1",
     "tap": "^18.7.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
